--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -12,7 +12,8 @@
         <checkbox value="{{item.name}}" checked="{{item.checked}}" />{{item.value}}
     </label> -->
       <label class="checkbox" wx:for="{{checkItems}}" wx:key="index">
-        <checkbox class="checkbox_input {{item.checked?'checked':''}}" value="{{item.value}}" checked="{{item.checked}}" />{{item.text}}
+        <checkbox class="checkbox_input {{item.checked?'checked':''}}" value="{{item.value}}" checked="{{item.checked}}" />
+        {{item.text}}
       </label>
     </checkbox-group>
   </view>
@@ -20,22 +21,34 @@
     <view class="btn large-btn active" bindtap="onConfirm">确定</view>
   </view>
 </view>
-
 <!-- mdoal -->
 <view class="modal-mask" catchtouchmove="preventTouchMove" bindtap="closeModal" hidden="{{!recmenPopup}}"></view>
 <view class='modal' catchtouchmove="preventTouchMove" hidden="{{!recmenPopup}}">
   <view bindtap="closeModal" class="mid_icon close"></view>
   <view class='modal-header'>
-    <text class='header-name'>Hi, 小精灵</text>
+    <text class='header-name'>Hi, {{userInfo.nickName}}</text>
     <image class="img" src=''></image>
   </view>
   <!-- <image class="bcgImg" src="/images/popupbcg.png"></image> -->
   <view class='modal-content'>
-  <scroll-view scroll-y="true" style="height: 800rpx;" scroll-with-animation="true" bindscrolltolower="loadMoreData" scroll-into-view="{{toView}}">
-
-  </scroll-view>
+    <scroll-view scroll-y="true" style="height: 800rpx;" scroll-with-animation="true" bindscrolltolower="loadMoreData" scroll-into-view="{{toView}}">
+      <block wx:for="{{products}}" wx:key="index">
+        <view class="vertical-item" data-goodsid="{{item.id}}" data-item="{{item}}" data-welftype="{{item.welfareProductType}}" data-id="{{item.id}}" catchtap=''>
+          <!-- 没授权 -->
+          <!-- <button class="auth-btn" wx:if='{{authLevel != 2}}' open-type="getUserInfo" bindgetuserinfo="onGotUserInfo"></button> -->
+          <image class="img" src='https://soure.chudianad.com/static/welfare/product/thumbImg/201812071702154410.jpg'></image>
+          <view class='info'>
+            <view class="row">
+              <view class='title'>简爱</view>
+              <view class="item-btn" data-id="2753" bindtap="freeListen">收听</view>
+            </view>
+            <view class='infos-desc' style="">后宫争斗,没有胜利者 后宫争斗,没有胜利者 后宫争斗,没有胜利者 没有胜利者</view>
+          </view>
+        </view>
+      </block>
+    </scroll-view>
   </view>
   <view class='btn-container'>
-    <button class='btn active' bindtap="">限时免费收听</button>
+    <button class='btn active' >限时免费收听</button>
   </view>
 </view>
